// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should resetFile should create resetFile action 1`] = `
Object {
  "type": "RESET_FILE",
}
`;

exports[`actions should setFile should create setFile action 1`] = `
Object {
  "payload": Object {
    "lastModifiedDate": 0,
    "msClose": [Function],
    "msDetachStream": [Function],
    "name": "thenameofthefile.txt",
    "path": "/all/the/way.txt",
    "size": 10,
    "slice": [Function],
    "type": "gorillaz/clintEastwood",
    "webkitRelativePath": "",
  },
  "type": "SET_FILE",
}
`;

exports[`actions should setIsPhraseUsed should create setIsPhraseUsed action 1`] = `
Object {
  "payload": false,
  "type": "SET_IS_PHRASE_USED",
}
`;

exports[`actions should setNewPhrase should create setNewPhrase action 1`] = `
Object {
  "payload": "something to look for",
  "type": "SET_NEW_PHRASE",
}
`;

exports[`actions should submitSearch should create submitSearch action 1`] = `
Object {
  "type": "SUBMIT_SEARCH",
}
`;

exports[`searchForm actions should resetFile should create resetFile action 1`] = `
Object {
  "type": "RESET_FILE",
}
`;

exports[`searchForm actions should setFile should create setFile action 1`] = `
Object {
  "payload": Object {
    "lastModified": 1,
    "lastModifiedDate": 2018-08-04T23:44:12.251Z,
    "msClose": [Function],
    "msDetachStream": [Function],
    "name": "thenameofthefile.txt",
    "path": "/all/the/way.txt",
    "size": 10,
    "slice": [Function],
    "type": "gorillaz/clintEastwood",
    "webkitRelativePath": "",
  },
  "type": "SET_FILE",
}
`;

exports[`searchForm actions should setIsPhraseUsed should create setIsPhraseUsed action 1`] = `
Object {
  "payload": false,
  "type": "SET_IS_PHRASE_USED",
}
`;

exports[`searchForm actions should setNewPhrase should create setNewPhrase action 1`] = `
Object {
  "payload": "something to look for",
  "type": "SET_NEW_PHRASE",
}
`;

exports[`searchForm actions should submitSearch should create submitSearch action 1`] = `
Object {
  "type": "SUBMIT_SEARCH",
}
`;
